record and detail api done

--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -58,14 +58,26 @@
         app:layout_constraintStart_toStartOf="@+id/email_txt"
         app:layout_constraintTop_toBottomOf="@+id/email_txt" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/f_name_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:fontFamily="@font/open_sans_bold"
+        android:text="@string/enter_address"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_14ssp"
+        app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout4"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
+        android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="@dimen/_40sdp"
         android:background="@drawable/bg_main_gradient"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
+        app:layout_constraintTop_toBottomOf="@+id/f_name_txt"
         tools:layout_editor_absoluteX="12dp">
 
         <ImageView
@@ -73,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:src="@drawable/search_icon"
+            android:src="@drawable/email_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -102,12 +114,12 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/open_sans_bold"
         android:text="@string/next"
         android:textSize="@dimen/_12ssp"
         app:cornerRadius="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
         tools:layout_editor_absoluteX="13dp" />
 
