--- a/app/src/main/res/layout/history_item_layout.xml
+++ b/app/src/main/res/layout/history_item_layout.xml
@@ -34,10 +34,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_10sdp"
-            android:fontFamily="@font/open_sans_semibold"
+            android:fontFamily="@font/open_sans_bold"
             android:text="Hello"
             android:textColor="@color/black"
-            android:textSize="@dimen/_12sdp"
+            android:textSize="@dimen/_14sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,10 +45,10 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_medium"
+            android:fontFamily="@font/open_sans_semibold"
             android:text="30/45/2024"
-            android:textColor="@color/light_blue"
-            android:textSize="@dimen/_10sdp"
+            android:textColor="@color/text_color_new"
+            android:textSize="@dimen/_12sdp"
             app:layout_constraintStart_toStartOf="@+id/title"
             app:layout_constraintTop_toBottomOf="@+id/title" />
 
@@ -71,10 +71,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_3sdp"
-            android:fontFamily="@font/opensans_medium"
+            android:fontFamily="@font/open_sans_semibold"
             android:text="9:30 Am"
-            android:textColor="@color/light_blue"
-            android:textSize="@dimen/_10sdp"
+            android:textColor="@color/text_color_new"
+            android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toBottomOf="@+id/date"
             app:layout_constraintStart_toEndOf="@+id/dot"
             app:layout_constraintTop_toTopOf="@+id/date" />
@@ -98,24 +98,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_3sdp"
-            android:fontFamily="@font/opensans_medium"
+            android:fontFamily="@font/open_sans_semibold"
             android:text="50 min"
-            android:textColor="@color/light_blue"
-            android:textSize="@dimen/_10sdp"
+            android:textColor="@color/text_color_new"
+            android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toBottomOf="@+id/date"
             app:layout_constraintStart_toEndOf="@+id/dot1"
             app:layout_constraintTop_toTopOf="@+id/date" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/origionalTxt"
+            android:id="@+id/transcribeTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_10sdp"
-            android:fontFamily="@font/opensans_medium"
+            android:fontFamily="@font/opensans_regular"
             android:maxLines="3"
             android:text=".mettin about whether\n.hhhhhhh\n.hgfffggggghhggg"
-            android:textColor="@color/textColor"
-            android:textSize="@dimen/_10sdp"
+            android:textColor="@color/text_color_new"
+            android:textSize="@dimen/_12ssp"
             android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/date"
