--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -76,8 +76,8 @@
         android:id="@+id/idTxt"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:textColor="@color/light_blue"
-        android:textSize="@dimen/_14ssp"
+        android:textColor="@color/text_color_new"
+        android:textSize="@dimen/_12ssp"
         android:fontFamily="@font/open_sans_semibold"
         android:lineSpacingExtra="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_20sdp"
@@ -90,10 +90,18 @@
         android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="10dp"
+        android:minWidth="10dp"
+        android:maxHeight="10dp"
+        android:maxWidth="10dp"
+        android:splitTrack="false"
+
+        android:progressDrawable="@drawable/custom_seekbar"
+        android:thumb="@drawable/custom_thumb"
         android:layout_marginHorizontal="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_70sdp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="13dp" />
+     />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/skipBackwardBtn"
@@ -129,6 +137,15 @@
         app:layout_constraintStart_toEndOf="@+id/PlayPauseBtn"
         app:layout_constraintTop_toTopOf="@+id/PlayPauseBtn"
         app:srcCompat="@drawable/play_next" />
-
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressTint="@color/blue"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
