--- a/app/src/main/res/layout/fragment_recording.xml
+++ b/app/src/main/res/layout/fragment_recording.xml
@@ -12,11 +12,13 @@
         style="@style/CustomTabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tabIndicator="@null"
         app:tabIndicatorHeight="0dp"
+        app:tabRippleColor="@null"
         app:tabMode="scrollable" />
 
     <androidx.viewpager2.widget.ViewPager2
