--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="light_black">#231F1F</color>
     <color name="hint_color">#AEAEAE</color>
     <color name="blue">#0F72D7</color>
+    <color name="text_color_new">#838383</color>
 
 </resources>
