--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -80,6 +80,11 @@
         android:name="com.example.transcribeapp.fragment.authorization.VerifyEmail"
         android:label="fragment_verify_email"
         tools:layout="@layout/fragment_verify_email" />
+    <fragment
+        android:id="@+id/userProfileSetting"
+        android:name="com.example.transcribeapp.fragment.authorization.UserProfileSetting"
+        android:label="fragment_user_profile_setting"
+        tools:layout="@layout/fragment_user_profile_setting" />
 
 
 </navigation>
