--- a/app/src/main/res/layout/question_rcv_item.xml
+++ b/app/src/main/res/layout/question_rcv_item.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_60sdp"
-    android:layout_margin="@dimen/_5sdp"
+    android:layout_height="wrap_content"
+    android:paddingVertical="@dimen/_10sdp"
+    android:layout_marginTop="@dimen/_5sdp"
+    android:layout_marginHorizontal="@dimen/_10sdp"
     android:background="@drawable/question_rcv_bg">
 
 
@@ -18,13 +20,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_questions"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="what are the main action to be completed for a live Navigotot"
         android:textColor="@color/white"
         android:fontFamily="@font/opensans_regular"
-        android:textSize="@dimen/_14ssp"
-        android:layout_marginHorizontal="@dimen/_10sdp"
+        android:textSize="@dimen/_13ssp"
+        android:layout_marginEnd="@dimen/_5sdp"
+        android:layout_marginStart="@dimen/_7sdp"
         app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/appCompatImageView5"
