--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/question_bg"
-        android:fontFamily="@font/opensans_regular"
+        android:fontFamily="@font/open_sans_regular"
         android:gravity="center"
         android:maxWidth="@dimen/_200sdp"
         android:paddingVertical="@dimen/_10sdp"
