--- a/app/src/main/res/layout/fragment_ai_chat_inner.xml
+++ b/app/src/main/res/layout/fragment_ai_chat_inner.xml
@@ -17,6 +17,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvChatResponses"
         android:layout_width="match_parent"
@@ -29,9 +33,24 @@
         android:id="@+id/rcvQuestions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@id/clChat" />
+
+
+
+    <include
+        layout="@layout/chat_dialog_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clChat"
