--- a/app/src/main/res/layout/fragment_calender_event.xml
+++ b/app/src/main/res/layout/fragment_calender_event.xml
@@ -13,6 +13,7 @@
         android:text="@string/upcoming"
         android:textColor="@color/textColorS"
         android:textSize="@dimen/_14ssp"
+        android:layout_marginStart="@dimen/_10sdp"
         android:fontFamily="@font/open_sans_bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,6 +22,7 @@
         android:id="@+id/eventRcv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/upComing" />
 
