--- a/app/src/main/res/layout/item_event_calender.xml
+++ b/app/src/main/res/layout/item_event_calender.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="@dimen/_200sdp"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/_50ssp"
+    android:layout_marginEnd="@dimen/_7sdp"
     android:layout_marginStart="@dimen/_5sdp"
     android:layout_marginTop="@dimen/_5sdp">
 
@@ -60,7 +60,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lowerLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_100sdp"
+        android:layout_height="@dimen/_90sdp"
         android:background="@drawable/bg_event_item_calender2"
         app:layout_constraintTop_toBottomOf="@+id/uPerLayout"
 
@@ -74,6 +74,8 @@
             android:fontFamily="@font/open_sans_semibold"
             android:text="OfferLanded Marketing \n Agency meeting"
             android:textSize="@dimen/_14ssp"
+            android:maxLines="2"
+            android:ellipsize="end"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_percent="0.5" />
@@ -83,7 +85,7 @@
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/eventTitle"
             app:layout_constraintTop_toBottomOf="@+id/eventTitle"
