--- a/app/src/main/res/layout/fragment_calender_event.xml
+++ b/app/src/main/res/layout/fragment_calender_event.xml
@@ -21,10 +21,16 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/eventRcv"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/upComing"
+        tools:layout_editor_absoluteX="13dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/historyRcv"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/upComing" />
+        app:layout_constraintTop_toBottomOf="@+id/eventRcv" />
 
     <ProgressBar
         android:id="@+id/progress"
